# DigitRecognizer

./: CMakeLists.txt  README.md
data/: DigitsRecognizer.cfg  perceptron.hex
src/: NeuralNetwork.cpp  NeuralNetwork.hpp  Perceptron.cpp  Perceptron.hpp  Tensor2D.cpp  Tensor2D.hpp  main.cpp
